--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="title_explore">Explore</string>
     <string name="title_dish">Dish</string>
     <string name="title_place">Post Recipe</string>
+
+    <string name="cooking_steps">- Heat 2 teaspoons oil over medium-high heat. Add the chicken and cook until golden brown, 1 to 2 minutes per side.\n- Heat 1 teaspoon oil in the pan over medium-high heat. Add shallots and cook, stirring constantly and scraping up any browned bits, until golden brown, 1 to 2 minutes. Sprinkle with 1 tablespoon flour; stir to coat. Add wine, broth and the ½ teaspoon salt, boil and stir often.\n- Use chicken, reduce heat to a simmer, and cook until heated through and no longer pink in the center, about 6 minutes. Stir in sour cream and mustard until smooth; turn the chicken to coat with the sauce. Stir in chives and serve immediately.
+</string>
 </resources>
